# pract2CG

./: CMakeLists.txt  LEEME.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgview.cpp  osgview.h  ui_mainwindow.h
